# trallocator

./: Cargo.toml  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
src/: lib.rs
