[package]
name = "trallocator"
version = "0.1.0"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/device-register"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/device-register"
description = "A `no_std` library to describe the registers permissions of a device to ease driver development."
documentation = "https://docs.rs/device-register"
readme = "README.md"
keywords = ["driver", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
allocator-api = []
max-usage = []

[dev-dependencies]
trallocator = { path = ".", version = "0.1.0", features = ["allocator-api", "max-usage"] }
