[package]
name = "trallocator"
version = "0.2.2"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/trallocator"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/trallocator"
description = "A no_std lbrary for wrapping an existing allocator and tracking the heap usage."
documentation = "https://docs.rs/trallocator"
readme = "README.md"
keywords = ["allocator", "heap", "no-std"]
categories = ["embedded", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
allocator-api = []
max-usage = []

[package.metadata.docs.rs]
all-features = true
